Fixed: Dark mode styles

--- a/static/style.css
+++ b/static/style.css
@@ -147,7 +147,6 @@ footer {
 
   header {
     background: #1f1f1f;
-    border-bottom: #444 3px solid;
   }
 
   .main {
